# subsea-bench

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.claude/skills/mermaid-diagram/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
docs/: architecture.md  glossary.md
docs/decisions/: 0001-supervisor-framework.md  README.md
docs/research/: README.md
src/subsea_bench/: __init__.py  analysis.py  catalog.py  config.py  dnv.py  economics.py  models.py  scoring.py  server.py  supervisor.py  workspace.py
src/subsea_bench/mcp/: __init__.py
src/subsea_bench/mcp/tools/: __init__.py  ask_supervisor.py  get_project_status.py  query_catalog.py  run_analysis.py  submit_for_review.py
tests/: __init__.py  test_placeholder.py
tests/unit/: __init__.py  test_placeholder.py  test_server.py
tests/validation/: __init__.py  test_volturnus_s.py  validation_report.md
