[project]
name = "subsea-bench"
version = "0.1.0"
description = "Benchmark for evaluating AI agents on subsea engineering tasks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
subsea-bench-mcp = "subsea_bench.server:main"

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.14"