[project]
name = "subsea-bench"
version = "0.0.1"
description = "Benchmark for evaluating AI coding agents on subsea engineering tasks"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Matheus Couto" }]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]

[project.scripts]
subsea-bench-mcp = "subsea_bench.mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-p no:langsmith_plugin"  # langsmith pytest plugin crashes on Python 3.14

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "TC001",  # stub imports will be needed at runtime once implemented
    "TC003",  # same — stdlib imports used in annotations become runtime once stubs fill in
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D", "ANN"]
"**/__init__.py" = ["D104"]
